# rust-szkolenie-2025

./: .gitignore  Cargo.toml  README.md  dangling_pointer  implicit_conversion
libs/: Cargo.toml  add.rs  sub.rs
src/: async.rs  borrow.rs  compound_types.rs  consts.rs  control_flow.rs  control_flow_part_2.rs  enums.rs  error_handling.rs  example_code.c  example_code_dangling_pointer.c  example_code_implicit_conversion.c  example_code_lifetime.rs  functions.rs  hello_world.rs  hof.rs  lifetimes.rs  macro_rules.rs  multithreaded.rs  primitive_types.rs  raii.rs  scopes.rs  string_types.rs  structs.rs  traits_impls.rs  types_continued.rs
src/coding/: 001-fizzbuzz-with-prime-factorization.rs  002-hangman-game.rs  003-number-quessing-game.rs  004-fibonacci-sequence-generator-with-saved-state.rs  005-gui-file-explorer.rs  006-rest-countries-egui-app.rs  007-actix-todo-api.rs
src/examples/: empty_slice_parsing.rs
testing_workspace/: Cargo.toml  testing.rs
testing_workspace/tests/: integration_tests.rs
