[package]
name = "szkolenie-rust-2025"
version = "0.0.1"
edition = "2024"
authors = ["Maciej Oliwa <oliwa.maciej@gmail.com>"]
default-run = "hello_world"

# All binaries for examples are here

[[bin]]
name = "hello_world"
path = "src/hello_world.rs"

[[bin]]
name = "primitive_types"
path = "src/primitive_types.rs"

[[bin]]
name = "types_continued"
path = "src/types_continued.rs"

[[bin]]
name = "compound_types"
path = "src/compound_types.rs"

[[bin]]
name = "control_flow"
path = "src/control_flow.rs"

[[bin]]
name = "control_flow_cont"
path = "src/control_flow_part_2.rs"

[[bin]]
name = "string_types"
path = "src/string_types.rs"

[[bin]]
name = "structs"
path = "src/structs.rs"

[[bin]]
name = "enums"
path = "src/enums.rs"

[[bin]]
name = "consts"
path = "src/consts.rs"

[[bin]]
name = "slice_parsing"
path = "src/examples/empty_slice_parsing.rs"

[[bin]]
name = "functions"
path = "src/functions.rs"

[[bin]]
name = "raii"
path = "src/raii.rs"

[[bin]]
name = "scopes"
path = "src/scopes.rs"

[[bin]]
name = "borrow"
path = "src/borrow.rs"

[[bin]]
name = "lifetimes"
path = "src/lifetimes.rs"

[[bin]]
name = "higher_order_functions"
path = "src/hof.rs"

[[bin]]
name = "traits_impls"
path = "src/traits_impls.rs"

[[bin]]
name = "example_code_lifetime"
path = "src/example_code_lifetime.rs"

[[bin]]
name = "macro_rules"
path = "src/macro_rules.rs"

[[bin]]
name = "error_handling"
path = "src/error_handling.rs"

[profile.panic_unwind]
inherits = "dev"
panic = "unwind"

[profile.panic_abort]
inherits = "dev"
panic = "abort"

[[bin]]
name = "multithreaded"
path = "src/multithreaded.rs"

[[bin]]
name = "async"
path = "src/async.rs"

# Coding tasks binaries are defined here
[[bin]]
name = "fizzbuzz"
path = "src/coding/001-fizzbuzz-with-prime-factorization.rs"

[[bin]]
name = "hangman_game"
path = "src/coding/002-hangman-game.rs"

[[bin]]
name = "number_quessing_game"
path = "src/coding/003-number-quessing-game.rs"

[[bin]]
name = "fibonacci_sequence"
path = "src/coding/004-fibonacci-sequence-generator-with-saved-state.rs"

[[bin]]
name = "iced_explorer"
path = "src/coding/005-gui-file-explorer.rs"

[[bin]]
name = "country_visualizer"
path = "src/coding/006-rest-countries-egui-app.rs"

[[bin]]
name = "todo_backend"
path = "src/coding/007-actix-todo-api.rs"

[dependencies]
my_libs = { path = "./libs" }
tokio = { version = "1.0", features = ["full"] }

